--- a/public/templates/chatbox.html
+++ b/public/templates/chatbox.html
@@ -2,11 +2,11 @@
 	<div class="panel panel-primary">                         
 		<div class="panel-heading">{{maininfo.sessionid}}</div>                                                    
 		<div class="panel-body">															
-			<form id="chat">			                                                                                     
+			<form id="chat" ng-submit="submit()">			                                                                                     
 				<div class="input-group">
-					<input type="text" class="form-control" id="chat-input" />
+					<input type="text" class="form-control" id="chat-input" ng-model="msg"/>
 					<span class="input-group-btn">
-						<button type="submit" class="btn btn-default">Send Message</button>
+						<button type="submit" class="btn btn-default" >Send Message</button>
 					</span>
 				</div>
 			</form>
