--- a/public/templates/sessionform.html
+++ b/public/templates/sessionform.html
@@ -16,7 +16,7 @@
                         		</div>
                             </div>
                             <div class="form-bottom">
-			                    <form role="form" class="login-form" ng-submit="submit()" action="/home" method="post">
+			                    <form role="form" class="login-form" ng-submit="submit()" >
 			                    	<div class="form-group">
 			                    		<label class="sr-only" for="form-username">Enter Session Name...</label>
 			                        	<input type="text" ng-model="sname" name="sessionid" placeholder="Enter Session Name..." class="form-username form-control" id="form-sessionid">
