--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -2,7 +2,7 @@
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
-            <div ui-view='sessionList'></div>
+            <div ui-view='sessionList' ng-controller="ListCtrl"></div>
 
         </div>
         <!-- /#sidebar-wrapper -->
