--- a/public/templates/chatbox.html
+++ b/public/templates/chatbox.html
@@ -4,7 +4,7 @@
 		<div class="panel-body">
 			<div id="chat-log"></div>															
 			<form id="chat" ng-submit="submit()">			                                                                                     
-				<div class="input-group">
+				<div class="input-group" ng-hide="maininfo.chatStatus === 'ended'">
 					<input type="text" class="form-control" id="chat-input" ng-model="msg"/>
 					<span class="input-group-btn">
 						<button type="submit" class="btn btn-default" >Send Message</button>
@@ -14,4 +14,7 @@
 		</div>
 	</div>
 <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+<div id="counter"></div>  
+<button id="reset" ng-click="reset()">Reset!</button> 
+<timer /> 
 </div>
