--- a/public/templates/userlist.html
+++ b/public/templates/userlist.html
@@ -29,10 +29,10 @@
                        
                     </div>
             </ul>
-            <div ng-controller="timeCtrl">
+            <div>
 	<div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="{{counter}}"
-  aria-valuemin="0" aria-valuemax="600" ng-style="{width:counter/{{counter}}*100+'%'}">
+  aria-valuemin="0" aria-valuemax="900" ng-style="{width:counter/900*100+'%'}">
     <span class="sr-only">{{counter}}% Complete</span>
   </div>
 </div>
