--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,3 +1,8 @@
+<style>
+#wrapper {
+    padding-left: 0px!important;
+}
+</style>
 <div class="top-content" ng-controller="loginCtrl">
         	
             <div class="inner-bg">
